--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.10.0",
+    "firebase": "^12.0.0",
     "joi": "^17.13.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
