--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.7.0"
   },
   "devDependencies": {
