--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.10.0",
     "firebase": "^12.0.0",
+    "framer-motion": "^12.23.11",
     "joi": "^17.13.3",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
